--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "jest": {
+    "testEnvironment": "node"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "set-node-env": "set NODE_ENV=test",
+    "test": "npm run set-node-env && jest",
+    "start:dev": "set NODE_ENV=dev && nodemon server.js",
+    "start": "set NODE_ENV=dev && node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +25,8 @@
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   }
 }
