--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "set-node-env": "set NODE_ENV=test",
-    "test": "npm run set-node-env && jest",
+    "test": "npm run set-node-env && jest --runInBand --silent",
     "start:dev": "set NODE_ENV=dev && nodemon server.js",
     "start": "set NODE_ENV=dev && node server.js"
   },
@@ -24,6 +24,8 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
