change config for test and dev server

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,9 @@
     "testEnvironment": "node"
   },
   "scripts": {
-    "set-node-env": "set NODE_ENV=test",
+    "set-node-env": "set NODE_ENV=test PORT=8080",
     "test": "npm run set-node-env && jest --runInBand --silent",
+    "test:debug": "npm run set-node-env && jest --runInBand",
     "start:dev": "set NODE_ENV=dev && nodemon server.js",
     "start": "set NODE_ENV=dev && node server.js"
   },
