--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "sweetalert2": "^10.16.6",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
+    "vue-session": "^1.0.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -24,6 +26,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.32.11",
+    "sass-loader": "^11.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
