--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "sharp": "^0.28.3"
   },
   "devDependencies": {
     "jest": "^26.6.3",
