--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "test": "npm run set-node-env && jest --runInBand --silent --verbose",
     "test:debug": "npm run set-node-env && jest --runInBand",
     "start:dev": "set NODE_ENV=dev && nodemon server.js",
-    "start": "set NODE_ENV=dev && node server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
